Fixed The Alignment Of Footer

--- a/client/src/components/Footer/FooterStyle.css
+++ b/client/src/components/Footer/FooterStyle.css
@@ -2,12 +2,12 @@
     width: 100%;
     height: 100%;
     display: flex;
-    /* justify-content:space-around; */
+    justify-content:space-evenly;
     align-items: center;
 }
 .footer{
     padding: 7px 0;
-    background-color: rgb(241, 241, 241);;
+    background-color: rgb(241, 241, 241);
 }
 .pageLinks{
     display:flex;
